--- a/style.css
+++ b/style.css
@@ -6,24 +6,40 @@
   box-sizing: border-box;
 }
 
-:root { 
+.white-mode:root { 
   font-size: 62.5%;
 
 
   --bg-color: #fff;
   --font-color: #323238;
   --primary-color: #E1E1E6;
-  --secundary-color: #02799D;
+  --secundary-color: #72d6f5;
+  --color-first-fill: #323238; 
+  --color-hover-fill: #fff;
+  
 }
+
+.dark-mode:root { 
+  font-size: 62.5%;
+
+  --bg-color:#0d0d0e;
+  --font-color: #fff;
+  --primary-color:#29292E;
+  --secundary-color:#0A3442;
+  --color-first-fill: #C4C4CC;
+  --color-hover-fill: #fff;
+
+}
+
+
 
 body { 
   height: 100vh;
   font-size: 1.6rem;
   background-color: var(--bg-color);
   font-family: 'Roboto', sans-serif;
-display: grid;
-align-content: center;
-justify-content: center;
+  display: grid;
+
 }
 
 button { 
@@ -32,8 +48,22 @@ button {
   cursor: pointer;
 }
 
-main { 
+header { 
+  align-self: start;
+  justify-self: end;
+  position: fixed;
+  right: 15rem;
+  top: 7rem;
+  animation: toRight 1000ms;
   
+}
+
+
+
+
+main { 
+  align-self: center;
+  justify-self: center;
   display: grid;
   grid-template-columns: 1fr 1fr;
   width: 82rem;
@@ -43,6 +73,7 @@ main {
 
 span { 
   font-size: 12.6rem;
+  color: var(--font-color);
 }
 
 .timer { 
@@ -58,6 +89,10 @@ span {
   display: flex;
   gap: 4rem ;
 
+}
+
+.buttons-timer button svg path { 
+  fill: var( --color-first-fill);
 }
 
 .buttons-timer button { 
@@ -78,28 +113,66 @@ span {
 
 .buttons button { 
   background-color: var(--primary-color);
-
   padding: 4.8rem;
   border-radius: 2.4rem;
   transition: transform 200ms;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 3.2rem ;
+}
+
+.buttons button svg path { 
+  fill: var( --color-first-fill);
+ 
 }
 
 .buttons button:hover  { 
   transform: scale(1.1);
-  background-color: var(--secundary-color);
+
   
 
 }
 
-.buttons button:hover svg path { 
-  fill: white;
+
+
+
+
+.slider-cont .slider  { 
+  appearance: none;
+  width: 100%;
+  height: 5px;
+  border-radius: 5px;
+  outline: none;
+  background-color: var(--font-color);
+}
+
+.slider-cont .slider::-webkit-slider-thumb { 
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  background-color:var(--font-color) ;
+  border-radius: 50%;
+  cursor:pointer;
+  outline: none;
+  transition: transform .3s ease-in-out;
+}
+
+.slider-cont .slider::-webkit-slider-thumb:hover { 
+  transform: scale(1.2);
 }
 
 .hide { 
   display: none;
 }
 
+
 @media (max-width: 911px) { 
+  header { 
+    top: 2rem;
+    right: 3rem;
+  }
   main { 
     width: 20rem;
     display: flex; 
@@ -111,6 +184,8 @@ span {
   .buttons {
     margin-right: 3.2rem;
   }
+
+
 }
 
 @keyframes toLeft { 
@@ -136,3 +211,4 @@ span {
     opacity: 1;
   }
  }
+
